# learning

learning-react/code-examples/e-commerce/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
learning-react/code-examples/e-commerce/src/: index.css  main.tsx  router.tsx
learning-react/code-examples/e-commerce/src/components/: Navbar.module.scss  Navbar.tsx
learning-react/code-examples/e-commerce/src/pages/: About.tsx  Contact.tsx  Home.module.scss  Home.tsx  Services.tsx
learning-react/code-examples/pokemon/: package-lock.json  package.json
learning-react/code-examples/react-hooks/: package-lock.json  package.json
learning-react/code-examples/thinking-react/: package-lock.json  package.json
learning-react/code-examples/tic-tac-toe/: package-lock.json
learning-react/code-examples/twitter-clone/: package-lock.json  package.json
learning-react/learning/udemy/react-fullstack-with-node+express+postgresql+aws/: package-lock.json
programming-languages/: LICENSE
programming-languages/cs/dotnet/: README.md
programming-languages/cs/giraffe/: Book.cs  Chef.cs  ItalianChef.cs  Movie.cs  Program.cs  Song.cs  Student.cs
programming-languages/cs/writing_to_console/: Program.cs
programming-languages/python/pytorch/: 01 tensors.ipynb  02 datasets.ipynb  03 transform.ipynb  04 models.ipynb  05 autograd.ipynb
programming-languages/rust/book/06/03/: Cargo.toml
programming-languages/rust/wix-attempt/: Cargo.toml
programming-languages/rust/wix-attempt/src/: main.rs
programming-languages/rust/wix-attempt/wix/: License.rtf  main.wxs
(+89 files in other folders)
